--- a/src/app/admin/pages/order-details/order-details.component.scss
+++ b/src/app/admin/pages/order-details/order-details.component.scss
@@ -127,7 +127,7 @@
 }
 .order-table table tr{
     display: grid;
-    grid-template-columns: 40px 40px 3fr 1fr 1fr 1fr 120px;
+    grid-template-columns: 40px 40px 3fr 1fr 1fr 1fr 1fr 1fr 120px;
     grid-template-rows: auto;
 }
 .order-table table th{
@@ -141,7 +141,7 @@
     text-transform: capitalize;
 }
 .order-table table td{
-    padding: 15px 10px;
+    padding: 15px 5px;
     box-sizing: border-box;
     text-align: center;
     display: flex;
