--- a/src/app/admin/pages/order-details/order-details.component.html
+++ b/src/app/admin/pages/order-details/order-details.component.html
@@ -75,10 +75,10 @@
                             <span>{{order.price * order.quantity}}</span>
                         </td>
                         <td class="color">
-                            <span>{{order.color}}</span>
+                            <span>{{order.firstVariant}}</span>
                         </td>
                         <td class="size">
-                            <span>{{order.size}}</span>
+                            <span>{{order.secondVariant}}</span>
                         </td>
                         <td class="order-status">
                             <span>Pending</span>
