--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -5,11 +5,11 @@
     <div class="product-details-main">
       <!---product-img-slide-area-->
       <div class="carousel">
-            <swiper [loop]="true" 
+            <swiper [loop]="true"
             [autoplay]="{
               delay: 5000,
               disableOnInteraction:false
-            }" 
+            }"
             [pagination]="{
               clickable: true
             }"
@@ -24,7 +24,7 @@
       </div>
       <!---produt-title-area-->
       <div class="product-title-area">
-        <a href="#">Parma Mens Sports Shoe</a>
+        <a href="#">Mens Sports Shoe</a>
 
         <!---product-rating-area-->
         <div class="product-rating-area">
@@ -42,7 +42,7 @@
             <h3><a href="#">10 Ratings</a> <span> | </span> <a href="#">12 answered questions</a></h3>
           </div>
         </div>
-        
+
       </div>
 
         <!----product-details-midle-info-->
@@ -148,8 +148,8 @@
         <div class="product-bottom-details">
           <!---togle-btn-->
           <div class="toggle-btn">
-            <button type="button" (click)="descriptionToggle()" 
-            [class]="descriptionBtn?'toggle-btn-active ':'toggle-btn-inactive '"><span>Description</span> 
+            <button type="button" (click)="descriptionToggle()"
+            [class]="descriptionBtn?'toggle-btn-active ':'toggle-btn-inactive '"><span>Description</span>
               <i class="fa fa-chevron-down" *ngIf="descriptionBtn == false"></i>
               <i class="fa fa-chevron-up" *ngIf="descriptionBtn == true"></i>
             </button>
@@ -160,8 +160,8 @@
          <div class="product-bottom-details">
           <!---togle-btn-->
           <div class="toggle-btn">
-            <button type="button" (click)="shippingToggle()"  
-            [class]="shippingBtn?'toggle-btn-active ':'toggle-btn-inactive '"><span>Shipping & Returns </span> 
+            <button type="button" (click)="shippingToggle()"
+            [class]="shippingBtn?'toggle-btn-active ':'toggle-btn-inactive '"><span>Shipping & Returns </span>
               <i class="fa fa-chevron-down" *ngIf=" shippingBtn == false"></i>
               <i class="fa fa-chevron-up" *ngIf=" shippingBtn == true"></i>
             </button>
@@ -172,8 +172,8 @@
          <div class="product-bottom-details">
           <!---togle-btn-->
           <div class="toggle-btn">
-            <button type="button" (click)="reviewToggle()" 
-            [class]="reviewBtn?'toggle-btn-active ':'toggle-btn-inactive '"><span>Reviews</span> 
+            <button type="button" (click)="reviewToggle()"
+            [class]="reviewBtn?'toggle-btn-active ':'toggle-btn-inactive '"><span>Reviews</span>
               <i class="fa fa-chevron-down" *ngIf=" reviewBtn == false"></i>
               <i class="fa fa-chevron-up" *ngIf="  reviewBtn == true"></i>
             </button>
@@ -183,7 +183,7 @@
 
 
       </div>
-     
+
 
 
 
